test/failing/syntax2.trunnel

struct bad {
   u8 foo
   u16 bar
}
